--- a/src/app/tests/suites/DL_UsersAndCredentials.yaml
+++ b/src/app/tests/suites/DL_UsersAndCredentials.yaml
@@ -2517,3 +2517,11 @@ tests:
                 value: null
               - name: "nextCredentialIndex"
                 value: 7
+
+    - label: "Final clean-up"
+      command: "ClearUser"
+      timedInteractionTimeoutMs: 10000
+      arguments:
+          values:
+              - name: "userIndex"
+                value: 1
