Update CYW30739 TE8 fixes.
* DoFactoryReset would clear the key-value storage.
* Enable OTA requestor for CYW30739 apps.
* Refine the flash layout for the OTA functions.
* Disable loggings for lighting and lock app.
* Reuse Matter heap APIs for CYW30739 OpenThread implementation.
* Enable MBEDTLS_CCM_ALT, MBEDTLS_AES_ALT, and MBEDTLS_SHA256_ALT.
* Group keys into factory keys and config keys.
* Fix CYW30739Config write methods.
* Correct the storage entry count for additional keys.
* Add and process OTA image header for CYW30739.
* Implement network-interfaces and reboot-count.
* Fix currentLevel value mismatch.
* Implement PICS_MANUAL_OCCUPANCY_CHANGE.
* Instantiate identify object for lighting app.
* Implement IsFirstImageRun and ConfirmCurrentImage methods of OTAImageProcessorImpl.
* Compress large "Data" entries in DS.
* Change CHIP_CONFIG_MAX_FABRICS to 5 from 4.
* Add a debug arg for CYW30739 SDK.
* Implement SupportedCalendarTypes and SupportedLocales.
* Implement Door lock cluster.

--- a/examples/ota-requestor-app/cyw30739/BUILD.gn
+++ b/examples/ota-requestor-app/cyw30739/BUILD.gn
@@ -20,6 +20,7 @@ import("${cyw30739_sdk_build_root}/cyw30739_executable.gni")
 import("${cyw30739_sdk_build_root}/cyw30739_sdk.gni")
 
 cyw30739_project_dir = "${chip_root}/examples/ota-requestor-app/cyw30739"
+examples_plat_dir = "${chip_root}/examples/platform/cyw30739"
 
 declare_args() {
   setupPinCode = 20202021
@@ -29,7 +30,10 @@ declare_args() {
 cyw30739_sdk("sdk") {
   sources = [ "${cyw30739_project_dir}/include/CHIPProjectConfig.h" ]
 
-  include_dirs = [ "${cyw30739_project_dir}/include" ]
+  include_dirs = [
+    "${cyw30739_project_dir}/include",
+    "${examples_plat_dir}",
+  ]
 
   defines = [
     "CHIP_DEVICE_CONFIG_USE_TEST_SETUP_PIN_CODE=${setupPinCode}",
@@ -50,6 +54,13 @@ cyw30739_executable("ota_requestor_app") {
   ]
 
   include_dirs = [ "include" ]
+
+  if (chip_enable_ota_requestor) {
+    sources += [
+      "${examples_plat_dir}/OTAConfig.cpp",
+      "${examples_plat_dir}/OTAConfig.h",
+    ]
+  }
 }
 
 group("cyw30739") {
