--- a/config/nrfconnect/chip-module/CMakeLists.txt
+++ b/config/nrfconnect/chip-module/CMakeLists.txt
@@ -262,6 +262,11 @@ if (CONFIG_CHIP_PW_RPC)
     chip_gn_arg("pw_build_LINK_DEPS" [\"${PIGWEED_DIR}/pw_assert:impl\",\ \"${PIGWEED_DIR}/pw_log:impl\"])
 endif()
 
+if (CONFIG_CHIP_EXAMPLE_DEVICE_INFO_PROVIDER)
+    chip_gn_arg_bool("chip_build_example_providers" "true")
+    list(APPEND CHIP_LIBRARIES -lMatterDeviceInfoProviderExample)
+endif()
+
 file(GENERATE OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/args.tmp" CONTENT ${CHIP_GN_ARGS})
 
 # ==============================================================================
@@ -309,6 +314,10 @@ target_include_directories(chip INTERFACE
 target_link_directories(chip INTERFACE ${CMAKE_CURRENT_BINARY_DIR}/lib)
 if (CONFIG_CHIP_LIB_SHELL)
     target_link_options(chip INTERFACE -Wl,--whole-archive -lCHIPShell -Wl,--no-whole-archive)
+endif()
+
+if (CONFIG_CHIP_EXAMPLE_DEVICE_INFO_PROVIDER)
+    target_include_directories(chip INTERFACE ${CHIP_ROOT}/examples/providers)
 endif()
 
 if (CONFIG_CHIP_MALLOC_SYS_HEAP_OVERRIDE)
