Implement sending message from the linux layer of the android tv-app::platform-app to the tv-app::content-app. Resolving conflicts

--- a/examples/tv-app/android/BUILD.gn
+++ b/examples/tv-app/android/BUILD.gn
@@ -44,6 +44,8 @@ shared_library("jni") {
     "java/ChannelManager.cpp",
     "java/ChannelManager.h",
     "java/ClusterChangeAttribute.cpp",
+    "java/ContentAppCommandDelegate.cpp",
+    "java/ContentAppCommandDelegate.h",
     "java/ContentLauncherManager.cpp",
     "java/ContentLauncherManager.h",
     "java/JNIDACProvider.cpp",
@@ -99,6 +101,8 @@ android_library("java") {
     "java/src/com/tcl/chip/tvapp/ChannelManager.java",
     "java/src/com/tcl/chip/tvapp/ChannelManagerStub.java",
     "java/src/com/tcl/chip/tvapp/Clusters.java",
+    "java/src/com/tcl/chip/tvapp/ContentAppEndpointManager.java",
+    "java/src/com/tcl/chip/tvapp/ContentAppEndpointManagerStub.java",
     "java/src/com/tcl/chip/tvapp/ContentLaunchBrandingInformation.java",
     "java/src/com/tcl/chip/tvapp/ContentLaunchManager.java",
     "java/src/com/tcl/chip/tvapp/ContentLaunchManagerStub.java",
