--- a/examples/tv-app/android/App/content-app/src/main/AndroidManifest.xml
+++ b/examples/tv-app/android/App/content-app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
         android:supportsRtl="true"
         android:enabled="true"
         android:theme="@style/Theme.ContentApp">
-        <meta-data android:name="com.matter.app_agent_api.clusters" android:resource="@raw/static_matter_clusters" />
+        <meta-data android:name="com.matter.tv.app.api.clusters" android:resource="@raw/static_matter_clusters" />
+        <meta-data android:name="com.matter.tv.app.api.vendor_name" android:value="CSA" />
+        <meta-data android:name="com.matter.tv.app.api.vendor_id" android:value="1234" />
+        <meta-data android:name="com.matter.tv.app.api.product_id" android:value="5678" />
         <activity
             android:name="com.example.contentapp.MainActivity"
             android:exported="true">
