Introducing ble adaptation for webOS (#18498)
* [webOS] Support ble-wifi commissioning for webOS

* Implement the base functions
* Add ble central functionality

* Clean up sources under src/platform/webos

* Wipe out linux legacy left-over
* Remove white space
* Rename CHIPDevicePlatformEvent as *WebOS*
* Change CHIP_DEVICE_LAYER_TARGET from Linux to webos
* Change static library name of src/platform/webos as webos

* Fix build error of webOS platform

* Use resources under src/platform/Linux which is not overriden by webOS
* Remove configurationManagerImple.cpp
* Change CHIP_CONFIG_MDNS_CACHE_SIZE as 0
* Use webos for chip_device_platform

* Fix build error while building webos platform

* Build NetworkCommissioning resources
* Change header name from Linux to webos
* Build openthread to compile NetworkCommissioning resources

* Enable chip_enable_openthread

* Enable chip_enable_openthread as true for webOS build

* Update license

* This commit updates the license of ConenctivityManagerImpl.cpp

* Fix build structure of webos platform

* chip_use_ephemeral_port_for_mdns_unicast_query should be set as true
  for webOS as well.
* chip_enable_openthread should be set as true for webOS as well.
* chip_config_network_layer_ble is removed from gn gen command on scripts/
  examples/webos_example.sh, and will be set as true for default.
  chip_enable_ble will follow the chip_config_network_layer_ble.
* Initialize the result value inside MainLoop::StartLSMainLoop as true.

* [webOS] Remove unused codes in PlatfromManagerImpl

* Remove unused codes in PlatfromManagerImpl.cpp

* Fix build error due to latest upstream

* Compile error due to latest upstreat is fixed.
* Sync up and import missing resources from src/platform/Linux

* Fix build error on webos platform

* Remove type
* Remove unnecessary files for initial commit

* Remove commented line

* Remove garbage on Logging.cpp

* Remove commented linea (cont

--- a/src/lib/dnssd/minimal_mdns/BUILD.gn
+++ b/src/lib/dnssd/minimal_mdns/BUILD.gn
@@ -26,7 +26,8 @@ declare_args() {
   # payloads) and clients need to allocate more resources for this (need one
   # more UDP socket and corresponding code for the unicast query sending)
   chip_use_ephemeral_port_for_mdns_unicast_query =
-      current_os == "mac" || current_os == "linux" || current_os == "android"
+      current_os == "mac" || current_os == "linux" || current_os == "android" ||
+      current_os == "webos"
 
   # Be very verbose regarding packet communication. Will spend extra RAM and
   # Time to report mdns traffic in terms of sent and seen data.
