Add Open IoT SDK source to third_party
Add SDK and storage sources as submodules to
third_part/open-iot-sdk directory.

--- a/.gitmodules
+++ b/.gitmodules
@@ -247,3 +247,9 @@
 	url = https://github.com/bouffalolab/bl_iot_sdk_matter.git
 	branch = bl602_release
 	platforms = bl602
+[submodule "third_party/open-iot-sdk/sdk"]
+	path = third_party/open-iot-sdk/sdk
+	url = https://git.gitlab.arm.com/iot/open-iot-sdk/sdk.git
+[submodule "third_party/open-iot-sdk/storage"]
+	path = third_party/open-iot-sdk/storage
+	url = https://git.gitlab.arm.com/iot/open-iot-sdk/storage.git
